--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ p {
 	padding: 0 24px;
 }
 
-#container div {
+#container a {
 	display: inline-block;
 	background-color: #C7007D;
 	width: 120px;
@@ -33,8 +33,9 @@ p {
 	color: #FFFFFF;
 	margin: 12px 0 12px 24px;
 	box-shadow: 1px 1px 3px #5A5A5A;
+	text-decoration: none;
 }
 
-#container div:hover {
+#container a:hover {
 	background-color: #00BF32;
 }
