--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
+/* color palette: http://colorschemedesigner.com/#0041YnZw0w0w0 */
+
 @import url(http://fonts.googleapis.com/css?family=Duru+Sans);
 
 body {
-	background-color: #CFF76F;
+	background-color: #FFCA96;
 	font-family: 'Duru Sans', sans-serif;
 	font-size: 14px;
 }
@@ -14,19 +16,19 @@ body {
 }
 
 h1 {
-	margin: 0;
+	margin: 12px 0 0 0;
 	padding: 12px 0 8px 24px;
-	color: #FF5640;
+	color: #A61515;
 }
 
 p {
 	padding: 0 24px;
 }
 
-#container a {
+#fb-login-button {
 	display: inline-block;
-	background-color: #C7007D;
-	width: 120px;
+	background-color: #2B889E;
+	width: 230px;
 	text-align: center;
 	padding: 8px;
 	border-radius: 3px;
@@ -36,6 +38,19 @@ p {
 	text-decoration: none;
 }
 
-#container a:hover {
-	background-color: #00BF32;
+#fb-login-button:hover {
+	background-color: #0E5667;
+}
+
+#facebook-load {
+	margin: 0 24px 12px 24px;
+	/*padding-left: 24px;*/
+	padding: 8px;
+	border: 1px solid #118511;
+	border-radius: 3px;
+}
+
+#map-canvas {
+	width: 100%;
+	height: 380px;
 }
